--- a/welcome.html
+++ b/welcome.html
@@ -11,7 +11,7 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/css/theme/black.css" id="theme"/>
 
-<link rel="stylesheet" href="../local.css"/>
+<link rel="stylesheet" href="./local.css"/>
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
@@ -33,8 +33,58 @@
 </section>
 
 <section>
-<section id="slide-org2b751c9">
-<h2 id="org2b751c9">Projekt</h2>
+<section id="slide-org6c68222">
+<h2 id="org6c68222">Über mich</h2>
+<div class="outline-text-2" id="text-org6c68222">
+</div>
+</section>
+<section id="slide-orgf38b4b2">
+<h3 id="orgf38b4b2">Name</h3>
+<p>
+Daniel Glinka (27)
+</p>
+</section>
+<section id="slide-org293e2bd">
+<h3 id="org293e2bd">Studium</h3>
+<p>
+Software Entwicklung (B.Eng) in Esslingen (Deutschland)
+</p>
+</section>
+<section id="slide-orgbf1ee5b">
+<h3 id="orgbf1ee5b">Arbeit</h3>
+<p>
+Cooperativa Multiactiva Neuland Ltda.
+</p>
+</section>
+<section id="slide-org111416a">
+<h3 id="org111416a">Links</h3>
+<ul>
+<li><a href="https://github.com/kaitsh">Github</a></li>
+<li><a href="https://www.linkedin.com/in/danielglinka/">LinkedIn</a></li>
+<li><a href="mailto:colegio@d-git.de">E-Mail</a></li>
+
+</ul>
+
+</section>
+</section>
+<section>
+<section id="slide-orgbe87996">
+<h2 id="orgbe87996">Über euch?</h2>
+</section>
+</section>
+<section>
+<section id="slide-org9eadc83">
+<h2 id="org9eadc83">Was erwartet ihr von dem Projekt?</h2>
+<div class="outline-text-2" id="text-org9eadc83">
+</div>
+</section>
+<section id="slide-org632260a">
+<h3 id="org632260a"><img src="./assets/welcome_expectations.gif" alt="welcome_expectations.gif" /></h3>
+</section>
+</section>
+<section>
+<section id="slide-org623cd2a">
+<h2 id="org623cd2a">Projekt</h2>
 <p class="fragment roll-in">
 Ziel des Projektes ist es, in Gruppen von ca. 3 Schülern, eine interaktive
 Website planen, gestalten und erstellen. Die Zeit kann selbst eingeteilt werden.
@@ -43,16 +93,16 @@ Am Ende präsentiert jede Gruppe ihr Projekt.
 </section>
 </section>
 <section>
-<section id="slide-org7f027a6">
-<h2 id="org7f027a6">Agenda</h2>
-<div class="outline-text-2" id="text-org7f027a6">
+<section id="slide-org35ef21a">
+<h2 id="org35ef21a">Agenda</h2>
+<div class="outline-text-2" id="text-org35ef21a">
 </div>
 </section>
-<section id="slide-org0c24b4e">
-<h3 id="org0c24b4e">Digitale Information und das Internet</h3>
+<section id="slide-org2c32c44">
+<h3 id="org2c32c44">Digitale Information und das Internet</h3>
 </section>
-<section id="slide-org6cb6b06">
-<h3 id="org6cb6b06">Methoden zur Planung von Softwareprojekten</h3>
+<section id="slide-org9b6b247">
+<h3 id="org9b6b247">Methoden zur Planung von Softwareprojekten</h3>
 <ul>
 <li>Projektmanagement</li>
 <li>Anforderungsanalyse</li>
@@ -63,8 +113,8 @@ Am Ende präsentiert jede Gruppe ihr Projekt.
 
 </ul>
 </section>
-<section id="slide-orgfae434b">
-<h3 id="orgfae434b">Einführung in die Programmierung</h3>
+<section id="slide-org1c3d95b">
+<h3 id="org1c3d95b">Einführung in die Programmierung</h3>
 <ul>
 <li>Markupsprache HTML</li>
 <li>Markupsprache CSS</li>
