--- a/welcome.html
+++ b/welcome.html
@@ -33,31 +33,31 @@
 </section>
 
 <section>
-<section id="slide-org6c68222">
-<h2 id="org6c68222">Über mich</h2>
-<div class="outline-text-2" id="text-org6c68222">
+<section id="slide-orge6879c9">
+<h2 id="orge6879c9">Über mich</h2>
+<div class="outline-text-2" id="text-orge6879c9">
 </div>
 </section>
-<section id="slide-orgf38b4b2">
-<h3 id="orgf38b4b2">Name</h3>
+<section id="slide-orged19830">
+<h3 id="orged19830">Name</h3>
 <p>
 Daniel Glinka (27)
 </p>
 </section>
-<section id="slide-org293e2bd">
-<h3 id="org293e2bd">Studium</h3>
+<section id="slide-orgfe9cbb0">
+<h3 id="orgfe9cbb0">Studium</h3>
 <p>
 Software Entwicklung (B.Eng) in Esslingen (Deutschland)
 </p>
 </section>
-<section id="slide-orgbf1ee5b">
-<h3 id="orgbf1ee5b">Arbeit</h3>
+<section id="slide-orgf352822">
+<h3 id="orgf352822">Arbeit</h3>
 <p>
 Cooperativa Multiactiva Neuland Ltda.
 </p>
 </section>
-<section id="slide-org111416a">
-<h3 id="org111416a">Links</h3>
+<section id="slide-org17c0a65">
+<h3 id="org17c0a65">Links</h3>
 <ul>
 <li><a href="https://github.com/kaitsh">Github</a></li>
 <li><a href="https://www.linkedin.com/in/danielglinka/">LinkedIn</a></li>
@@ -68,23 +68,23 @@ Cooperativa Multiactiva Neuland Ltda.
 </section>
 </section>
 <section>
-<section id="slide-orgbe87996">
-<h2 id="orgbe87996">Über euch?</h2>
+<section id="slide-org03c3f1b">
+<h2 id="org03c3f1b">Über euch?</h2>
 </section>
 </section>
 <section>
-<section id="slide-org9eadc83">
-<h2 id="org9eadc83">Was erwartet ihr von dem Projekt?</h2>
-<div class="outline-text-2" id="text-org9eadc83">
+<section id="slide-orgde3bca6">
+<h2 id="orgde3bca6">Was erwartet ihr von dem Projekt?</h2>
+<div class="outline-text-2" id="text-orgde3bca6">
 </div>
 </section>
-<section id="slide-org632260a">
-<h3 id="org632260a"><img src="./assets/welcome_expectations.gif" alt="welcome_expectations.gif" /></h3>
+<section id="slide-orgbdd9d9b">
+<h3 id="orgbdd9d9b"><img src="./assets/welcome_expectations.gif" alt="welcome_expectations.gif" /></h3>
 </section>
 </section>
 <section>
-<section id="slide-org623cd2a">
-<h2 id="org623cd2a">Projekt</h2>
+<section id="slide-org16c6f77">
+<h2 id="org16c6f77">Projekt</h2>
 <p class="fragment roll-in">
 Ziel des Projektes ist es, in Gruppen von ca. 3 Schülern, eine interaktive
 Website planen, gestalten und erstellen. Die Zeit kann selbst eingeteilt werden.
@@ -93,16 +93,16 @@ Am Ende präsentiert jede Gruppe ihr Projekt.
 </section>
 </section>
 <section>
-<section id="slide-org35ef21a">
-<h2 id="org35ef21a">Agenda</h2>
-<div class="outline-text-2" id="text-org35ef21a">
+<section id="slide-orgd249eb1">
+<h2 id="orgd249eb1">Agenda</h2>
+<div class="outline-text-2" id="text-orgd249eb1">
 </div>
 </section>
-<section id="slide-org2c32c44">
-<h3 id="org2c32c44">Digitale Information und das Internet</h3>
+<section id="slide-org22bd4ec">
+<h3 id="org22bd4ec">Digitale Information und das Internet</h3>
 </section>
-<section id="slide-org9b6b247">
-<h3 id="org9b6b247">Methoden zur Planung von Softwareprojekten</h3>
+<section id="slide-org08f8828">
+<h3 id="org08f8828">Methoden zur Planung von Softwareprojekten</h3>
 <ul>
 <li>Projektmanagement</li>
 <li>Anforderungsanalyse</li>
@@ -113,12 +113,101 @@ Am Ende präsentiert jede Gruppe ihr Projekt.
 
 </ul>
 </section>
-<section id="slide-org1c3d95b">
-<h3 id="org1c3d95b">Einführung in die Programmierung</h3>
+<section id="slide-orgf7f587b">
+<h3 id="orgf7f587b">Einführung in die Programmierung</h3>
 <ul>
 <li>Markupsprache HTML</li>
 <li>Markupsprache CSS</li>
 <li>Programmiersprache JavaScript</li>
+
+</ul>
+</section>
+</section>
+<section>
+<section id="slide-orgc34b7d2">
+<h2 id="orgc34b7d2">Innovationen</h2>
+<div class="outline-text-2" id="text-orgc34b7d2">
+</div>
+</section>
+<section id="slide-org085a5a3">
+<h3 id="org085a5a3">Innovation heißt, ein Problem zu erkennen und dieses zu lösen</h3>
+</section>
+<section id="slide-org36de6e0">
+<h3 id="org36de6e0">Aufgabe (Rapid Prototyping):</h3>
+<p>
+Wie innovativ sind wir? Präsentieren von Ideen durch Rapid Prototyping.
+</p>
+</section>
+<section>
+<ul>
+<li>Überlege dir 4 Dinge, die dich interessieren</li>
+<li>Denke nach, welche Auswirkungen Technologie darauf hat</li>
+<li>Welche Schwierigkeiten gibt es?</li>
+<li>Wie könnte Technologie diese Schwierigkeiten lösen oder zumindest die Dinge verbessern?</li>
+
+</ul>
+</section>
+<section id="slide-orgb886e45">
+<h3 id="orgb886e45">Tabelle</h3>
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">Interesse</th>
+<th scope="col" class="org-left">Verbesserungen</th>
+<th scope="col" class="org-left">Schwierigkeiten</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="slide-orge5ae626">
+<h3 id="orge5ae626">Prototyp</h3>
+<p>
+Skizziert eure Idee und stellt sie vor.
+</p>
+</section>
+</section>
+<section>
+<section id="slide-orge280790">
+<h2 id="orge280790">Ausblick</h2>
+<ul>
+<li>Internet</li>
+<li>Kommunikation</li>
+<li>Zahlensystemen (Binär)</li>
+<li>Codierungen</li>
 
 </ul>
 </section>
