--- a/internet.html
+++ b/internet.html
@@ -33,32 +33,32 @@
 </section>
 
 <section>
-<section id="slide-org278f907">
-<h2 id="org278f907">Wichtige Fragen</h2>
-<div class="outline-text-2" id="text-org278f907">
+<section id="slide-org4e1c0fc">
+<h2 id="org4e1c0fc">Wichtige Fragen</h2>
+<div class="outline-text-2" id="text-org4e1c0fc">
 </div>
 </section>
-<section id="slide-org6221ee5">
-<h3 id="org6221ee5">Wie stellen Computer Informationen dar?</h3>
+<section id="slide-org442a51d">
+<h3 id="org442a51d">Wie stellen Computer Informationen dar?</h3>
 </section>
-<section id="slide-org74e91ae">
-<h3 id="org74e91ae">Wie kommen Informationen von einem Computer zum anderen?</h3>
+<section id="slide-org30f131c">
+<h3 id="org30f131c">Wie kommen Informationen von einem Computer zum anderen?</h3>
 </section>
-<section id="slide-org97fb5fc">
-<h3 id="org97fb5fc">Wie kann man ein System erstellen, welche Informationen darstellt/versendet?</h3>
+<section id="slide-orgbf28d4a">
+<h3 id="orgbf28d4a">Wie kann man ein System erstellen, welche Informationen darstellt/versendet?</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org5d318d2">
-<h2 id="org5d318d2">Kommunizieren von Information</h2>
-<div class="outline-text-2" id="text-org5d318d2">
+<section id="slide-orgf7db13b">
+<h2 id="orgf7db13b">Kommunizieren von Information</h2>
+<div class="outline-text-2" id="text-orgf7db13b">
 </div>
 </section>
-<section id="slide-org1f173c5">
-<h3 id="org1f173c5">Aufgabe:</h3>
+<section id="slide-orgfc972ce">
+<h3 id="orgfc972ce">Aufgabe:</h3>
 <ul>
-<li>Überlegt euch zu 2 eine Frage, die eine binäre Antwort hat (2 Möglichkeiten)</li>
+<li>Überlegt euch zu 2 eine Frage, die eine binäre Antwort (2 Möglichkeiten) hat</li>
 <li>Baut etwas, womit ihr die Antwort versenden könnt</li>
 <li>Minimiert die Fehlerquellen
 <ul>
@@ -70,16 +70,16 @@
 
 </ul>
 </section>
-<section id="slide-orgd17baa4">
-<h3 id="orgd17baa4">Challenge1:</h3>
+<section id="slide-org8c9325f">
+<h3 id="org8c9325f">Challenge1:</h3>
 <ul>
 <li>Überlegt euch eine Frage, die 4 Antworten haben kann</li>
 <li>Passt euer Gerät an oder baut ein neues</li>
 
 </ul>
 </section>
-<section id="slide-orgbe29a74">
-<h3 id="orgbe29a74">Challenge2:</h3>
+<section id="slide-org7a641e0">
+<h3 id="org7a641e0">Challenge2:</h3>
 <ul>
 <li>Überlegt euch eine Frage, die 8 Antworten haben kann</li>
 <li>Passt euer Gerät an oder baut ein neues</li>
@@ -89,8 +89,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org5845819">
-<h2 id="org5845819">Zahlensysteme</h2>
+<section id="slide-orgf687fa0">
+<h2 id="orgf687fa0">Zahlensysteme</h2>
 <ul class="fragment roll-in">
 <li>Binär (2)</li>
 <li>Oktal (8)</li>
@@ -100,8 +100,8 @@
 
 </ul>
 </section>
-<section id="slide-org8d0b27e">
-<h3 id="org8d0b27e">Dezimal (Basis 10)</h3>
+<section id="slide-org2956d7b">
+<h3 id="org2956d7b">Dezimal (Basis 10)</h3>
 <pre  class="example">
 5498,23 = 5*10³ + 4*10² + 9*10¹ + 8*10⁰ + 2*10⁻¹ + 3*10⁻²
         = 5*1000 + 4*100 + 9*10 + 8*1 + 2*0.1 + 3*0.01
@@ -112,8 +112,8 @@ Tipp:
 </pre>
 
 </section>
-<section id="slide-orgf5a745c">
-<h3 id="orgf5a745c">Binär (Basis 2 - 0,1)</h3>
+<section id="slide-orge2e02bd">
+<h3 id="orge2e02bd">Binär (Basis 2 - 0,1)</h3>
 <pre  class="example">
 11 0110 = 1*2⁵ + 1*2⁴ + 0*2³ + 1*2² + 1*2¹ + 0*2⁰
           = 1*32 + 1*16 + 0*8 + 1*4 + 1*2 + 0*1
@@ -121,8 +121,8 @@ Tipp:
 </pre>
 
 </section>
-<section id="slide-orgb15f092">
-<h4 id="orgb15f092">Zusatz:</h4>
+<section id="slide-org486a218">
+<h4 id="org486a218">Zusatz:</h4>
 <ul>
 <li>Eine Stelle hat den Namen Bit</li>
 <li>8 Bits heißen Byte</li>
@@ -134,8 +134,8 @@ Tipp:
   11 0110 -&gt; 0011 0110
 </pre>
 </section>
-<section id="slide-orge1317ad">
-<h4 id="orge1317ad">Aufgabe:</h4>
+<section id="slide-orgf77d87d">
+<h4 id="orgf77d87d">Aufgabe:</h4>
 <ul>
 <li>Schreibe die 2er Potenzen bis 2¹²</li>
 <li>Schreibe die Zahlen von 0-7 in Binär untereinander</li>
@@ -150,13 +150,13 @@ Achte darauf, wie viele Bits (Stellen) du benötigst
 </p>
 
 </section>
-<section id="slide-orgcfa602b">
-<h4 id="orgcfa602b">Lösung:</h4>
-<div class="outline-text-4" id="text-orgcfa602b">
+<section id="slide-org9d336e1">
+<h4 id="org9d336e1">Lösung:</h4>
+<div class="outline-text-4" id="text-org9d336e1">
 </div>
 <ul class="org-ul">
-<li><a id="org71efb04"></a>1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096<br /></li>
-<li><a id="orgd6535a0"></a>-<br />
+<li><a id="org40dfed1"></a>1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096<br /></li>
+<li><a id="orgce8a234"></a>-<br />
 <pre  class="example">
 000 (0)   100 (4)
 001 (1)   101 (5)
@@ -164,19 +164,14 @@ Achte darauf, wie viele Bits (Stellen) du benötigst
 011 (3)   111 (7)
 </pre>
 </li>
-<li><a id="org37aa119"></a>0000 1101<br /></li>
-<li><a id="orge17f8c4"></a>1000 1101<br /></li>
-<li><a id="orgc3163ef"></a>1111 1111<br /></li>
+<li><a id="org484b647"></a>0000 1101<br /></li>
+<li><a id="org6628829"></a>1000 1101<br /></li>
+<li><a id="org9a35e30"></a>1111 1111<br /></li>
 </ul>
 
 </section>
-<section id="slide-org43f4d6c">
-<h3 id="org43f4d6c">Hexadezimal</h3>
-<ul>
-<li>Basis 16 (0-9, A-F)</li>
-
-</ul>
-
+<section id="slide-orgcc9a761">
+<h3 id="orgcc9a761">Hexadezimal (Basis 16 0-9,A-F)</h3>
 <pre  class="example">
 15 7A = 1*16³ + 5*16² + 7*16¹ + 10*16⁰
       = 1*4096 + 5*256 + 7*16 + 10*1
@@ -189,8 +184,8 @@ Umwandlung in Binär:
 </pre>
 
 </section>
-<section id="slide-org022c6fc">
-<h4 id="org022c6fc">Zusatz:</h4>
+<section id="slide-orgc4ec4c6">
+<h4 id="orgc4ec4c6">Zusatz:</h4>
 <ul>
 <li>Eine Stelle entspricht 4 Bits</li>
 <li>Bei Umrechnung in Dezimal, zuvor in Binär umrechnen</li>
@@ -199,8 +194,8 @@ Umwandlung in Binär:
 </ul>
 
 </section>
-<section id="slide-org916d50b">
-<h4 id="org916d50b">Aufgabe:</h4>
+<section id="slide-orgb6a8634">
+<h4 id="orgb6a8634">Aufgabe:</h4>
 <ul>
 <li>Schreibe die Zahl 13 in Hexadezimal</li>
 <li>Schreibe die Zahl 141 in Hexadezimal</li>
@@ -209,37 +204,67 @@ Umwandlung in Binär:
 </ul>
 
 </section>
-<section id="slide-org9023590">
-<h4 id="org9023590">Lösung:</h4>
-<ul class="fragment roll-in">
-<li>0x0D</li>
+<section id="slide-orgc40c3a7">
+<h4 id="orgc40c3a7">Lösung:</h4>
+<div class="outline-text-4" id="text-orgc40c3a7">
+</div>
+<ul class="org-ul">
+<li><a id="org7aacfbd"></a>0x0D<br /></li>
+<li><a id="orga55664a"></a>0x8D<br /></li>
+<li><a id="orgcd8f67a"></a>0xFF<br /></li>
+</ul>
+
+</section>
+</section>
+<section>
+<section id="slide-org0e0c7f9">
+<h2 id="org0e0c7f9">Codierungen</h2>
+<p>
+Computer stellen Informationen auf niedrigster Ebene in Binär dar. Für jedes
+Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
+</p>
+</section>
+<section id="slide-orgdf664a5">
+<h3 id="orgdf664a5">ASCII (7 Bit pro Zeichen)</h3>
+<ul>
+<li><a href="https://www.asciitable.com/">Ascii Tabelle</a></li>
+<li>128 Zeichen</li>
+<li>A -&gt; 0x41 (100 0001)</li>
+<li>B -&gt; 0x42 (100 0010)</li>
+<li>0 -&gt; 0x30 (011 0000)</li>
+<li>1 -&gt; 0x30 (011 0001)</li>
 
 </ul>
-<ul class="fragment roll-in">
-<li>0x8D</li>
+</section>
+<section id="slide-orgd4fe96f">
+<h3 id="orgd4fe96f">Unicode (1-4 Bytes pro Zeichen)</h3>
+<div class="outline-text-3" id="text-orgd4fe96f">
+</div>
+</section>
+<section id="slide-org862f306">
+<h4 id="org862f306">UTF-8</h4>
+<ul>
+<li><a href="https://www.utf8-chartable.de/">UTF-8 Tabelle</a></li>
+<li>$ -&gt; U+0024 -&gt; 0x24 -&gt; 0010 0100</li>
+<li>😄 -&gt; U+1F604 -&gt; 0xf0 0x9f 0x98 0x84</li>
 
 </ul>
-<ul class="fragment roll-in">
-<li>0xFF</li>
+</section>
+<section id="slide-org946b184">
+<h4 id="org946b184">UTF-16</h4>
+<ul>
+<li><a href="https://www.fileformat.info/info/charset/UTF-16/list.htm">UTF-16 Tabelle</a></li>
+<li>😄 -&gt; U+1F604 -&gt; 0xD8 0x3D 0xDE 0x04</li>
 
 </ul>
 
 </section>
 </section>
 <section>
-<section id="slide-org9b0e2ee">
-<h2 id="org9b0e2ee">Informationen</h2>
-<p>
-Computer stellen Informationen auf niedrigster Ebene in Binär dar. Für jedes
-Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
-</p>
-</section>
-<section id="slide-orgad91c3b">
-<h3 id="orgad91c3b">Codierungen</h3>
-<ul>
-<li>ASCII (7 Bit pro Zeichen)</li>
-<li>UTF-8 (8 Bit pro Zeichen)</li>
-<li>UTF-16 😄 (16 Bit pro Zeichen)</li>
+<section id="slide-orgbc3e3db">
+<h2 id="orgbc3e3db">Transfer von Bits</h2>
+<ul class="fragment roll-in">
+<li></li>
 
 </ul>
 </section>
