--- a/welcome.html
+++ b/welcome.html
@@ -33,31 +33,31 @@
 </section>
 
 <section>
-<section id="slide-orge6879c9">
-<h2 id="orge6879c9">Über mich</h2>
-<div class="outline-text-2" id="text-orge6879c9">
+<section id="slide-orgb21e3e1">
+<h2 id="orgb21e3e1">Über mich</h2>
+<div class="outline-text-2" id="text-orgb21e3e1">
 </div>
 </section>
-<section id="slide-orged19830">
-<h3 id="orged19830">Name</h3>
+<section id="slide-org1de616b">
+<h3 id="org1de616b">Name</h3>
 <p>
 Daniel Glinka (27)
 </p>
 </section>
-<section id="slide-orgfe9cbb0">
-<h3 id="orgfe9cbb0">Studium</h3>
+<section id="slide-orgecca064">
+<h3 id="orgecca064">Studium</h3>
 <p>
 Software Entwicklung (B.Eng) in Esslingen (Deutschland)
 </p>
 </section>
-<section id="slide-orgf352822">
-<h3 id="orgf352822">Arbeit</h3>
+<section id="slide-org393aadb">
+<h3 id="org393aadb">Arbeit</h3>
 <p>
 Cooperativa Multiactiva Neuland Ltda.
 </p>
 </section>
-<section id="slide-org17c0a65">
-<h3 id="org17c0a65">Links</h3>
+<section id="slide-orge504029">
+<h3 id="orge504029">Links</h3>
 <ul>
 <li><a href="https://github.com/kaitsh">Github</a></li>
 <li><a href="https://www.linkedin.com/in/danielglinka/">LinkedIn</a></li>
@@ -68,41 +68,41 @@ Cooperativa Multiactiva Neuland Ltda.
 </section>
 </section>
 <section>
-<section id="slide-org03c3f1b">
-<h2 id="org03c3f1b">Über euch?</h2>
+<section id="slide-org174c242">
+<h2 id="org174c242">Über euch?</h2>
 </section>
 </section>
 <section>
-<section id="slide-orgde3bca6">
-<h2 id="orgde3bca6">Was erwartet ihr von dem Projekt?</h2>
-<div class="outline-text-2" id="text-orgde3bca6">
+<section id="slide-orgc58669b">
+<h2 id="orgc58669b">Was erwartet ihr von dem Projekt?</h2>
+<div class="outline-text-2" id="text-orgc58669b">
 </div>
 </section>
-<section id="slide-orgbdd9d9b">
-<h3 id="orgbdd9d9b"><img src="./assets/welcome_expectations.gif" alt="welcome_expectations.gif" /></h3>
+<section id="slide-org8403488">
+<h3 id="org8403488"><img src="./assets/welcome_expectations.gif" alt="welcome_expectations.gif" /></h3>
 </section>
 </section>
 <section>
-<section id="slide-org16c6f77">
-<h2 id="org16c6f77">Projekt</h2>
+<section id="slide-org036a04e">
+<h2 id="org036a04e">Projekt</h2>
 <p class="fragment roll-in">
-Ziel des Projektes ist es, in Gruppen von ca. 3 Schülern, eine interaktive
+Ziel des Projektes ist es, in Gruppen von ca. 2 Schülern, eine interaktive
 Website planen, gestalten und erstellen. Die Zeit kann selbst eingeteilt werden.
 Am Ende präsentiert jede Gruppe ihr Projekt.
 </p>
 </section>
 </section>
 <section>
-<section id="slide-orgd249eb1">
-<h2 id="orgd249eb1">Agenda</h2>
-<div class="outline-text-2" id="text-orgd249eb1">
+<section id="slide-orga5cc16f">
+<h2 id="orga5cc16f">Agenda</h2>
+<div class="outline-text-2" id="text-orga5cc16f">
 </div>
 </section>
-<section id="slide-org22bd4ec">
-<h3 id="org22bd4ec">Digitale Information und das Internet</h3>
+<section id="slide-org787e345">
+<h3 id="org787e345">Digitale Information und das Internet</h3>
 </section>
-<section id="slide-org08f8828">
-<h3 id="org08f8828">Methoden zur Planung von Softwareprojekten</h3>
+<section id="slide-orgc04f54f">
+<h3 id="orgc04f54f">Methoden zur Planung von Softwareprojekten</h3>
 <ul>
 <li>Projektmanagement</li>
 <li>Anforderungsanalyse</li>
@@ -113,8 +113,8 @@ Am Ende präsentiert jede Gruppe ihr Projekt.
 
 </ul>
 </section>
-<section id="slide-orgf7f587b">
-<h3 id="orgf7f587b">Einführung in die Programmierung</h3>
+<section id="slide-org4794515">
+<h3 id="org4794515">Einführung in die Programmierung</h3>
 <ul>
 <li>Markupsprache HTML</li>
 <li>Markupsprache CSS</li>
@@ -124,16 +124,16 @@ Am Ende präsentiert jede Gruppe ihr Projekt.
 </section>
 </section>
 <section>
-<section id="slide-orgc34b7d2">
-<h2 id="orgc34b7d2">Innovationen</h2>
-<div class="outline-text-2" id="text-orgc34b7d2">
+<section id="slide-orgb14d772">
+<h2 id="orgb14d772">Innovationen</h2>
+<div class="outline-text-2" id="text-orgb14d772">
 </div>
 </section>
-<section id="slide-org085a5a3">
-<h3 id="org085a5a3">Innovation heißt, ein Problem zu erkennen und dieses zu lösen</h3>
+<section id="slide-org59cf361">
+<h3 id="org59cf361">Innovation heißt, ein Problem zu erkennen und dieses zu lösen</h3>
 </section>
-<section id="slide-org36de6e0">
-<h3 id="org36de6e0">Aufgabe (Rapid Prototyping):</h3>
+<section id="slide-org47ff5ef">
+<h3 id="org47ff5ef">Aufgabe (Rapid Prototyping):</h3>
 <p>
 Wie innovativ sind wir? Präsentieren von Ideen durch Rapid Prototyping.
 </p>
@@ -147,8 +147,8 @@ Wie innovativ sind wir? Präsentieren von Ideen durch Rapid Prototyping.
 
 </ul>
 </section>
-<section id="slide-orgb886e45">
-<h3 id="orgb886e45">Tabelle</h3>
+<section id="slide-org6557ee4">
+<h3 id="org6557ee4">Tabelle</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -193,16 +193,16 @@ Wie innovativ sind wir? Präsentieren von Ideen durch Rapid Prototyping.
 </tbody>
 </table>
 </section>
-<section id="slide-orge5ae626">
-<h3 id="orge5ae626">Prototyp</h3>
+<section id="slide-orgd1d4e55">
+<h3 id="orgd1d4e55">Prototyp</h3>
 <p>
 Skizziert eure Idee und stellt sie vor.
 </p>
 </section>
 </section>
 <section>
-<section id="slide-orge280790">
-<h2 id="orge280790">Ausblick</h2>
+<section id="slide-org7820713">
+<h2 id="org7820713">Ausblick</h2>
 <ul>
 <li>Internet</li>
 <li>Kommunikation</li>
