--- a/internet.html
+++ b/internet.html
@@ -33,30 +33,30 @@
 </section>
 
 <section>
-<section id="slide-org4e1c0fc">
-<h2 id="org4e1c0fc">Wichtige Fragen</h2>
-<div class="outline-text-2" id="text-org4e1c0fc">
+<section id="slide-orga2bba18">
+<h2 id="orga2bba18">Wichtige Fragen</h2>
+<div class="outline-text-2" id="text-orga2bba18">
 </div>
 </section>
-<section id="slide-org442a51d">
-<h3 id="org442a51d">Wie stellen Computer Informationen dar?</h3>
+<section id="slide-org6c56dcb">
+<h3 id="org6c56dcb">Wie stellen Computer Informationen dar?</h3>
 </section>
-<section id="slide-org30f131c">
-<h3 id="org30f131c">Wie kommen Informationen von einem Computer zum anderen?</h3>
+<section id="slide-orgef94737">
+<h3 id="orgef94737">Wie kommen Informationen von einem Computer zum anderen?</h3>
 </section>
-<section id="slide-orgbf28d4a">
-<h3 id="orgbf28d4a">Wie kann man ein System erstellen, welche Informationen darstellt/versendet?</h3>
+<section id="slide-orga10d708">
+<h3 id="orga10d708">Wie kann man ein System erstellen, welche Informationen darstellt/versendet?</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgf7db13b">
-<h2 id="orgf7db13b">Kommunizieren von Information</h2>
-<div class="outline-text-2" id="text-orgf7db13b">
+<section id="slide-orge46a382">
+<h2 id="orge46a382">Kommunizieren von Information</h2>
+<div class="outline-text-2" id="text-orge46a382">
 </div>
 </section>
-<section id="slide-orgfc972ce">
-<h3 id="orgfc972ce">Aufgabe:</h3>
+<section id="slide-orga01d44a">
+<h3 id="orga01d44a">Aufgabe:</h3>
 <ul>
 <li>Überlegt euch zu 2 eine Frage, die eine binäre Antwort (2 Möglichkeiten) hat</li>
 <li>Baut etwas, womit ihr die Antwort versenden könnt</li>
@@ -70,16 +70,16 @@
 
 </ul>
 </section>
-<section id="slide-org8c9325f">
-<h3 id="org8c9325f">Challenge1:</h3>
+<section id="slide-org4412062">
+<h3 id="org4412062">Challenge1:</h3>
 <ul>
 <li>Überlegt euch eine Frage, die 4 Antworten haben kann</li>
 <li>Passt euer Gerät an oder baut ein neues</li>
 
 </ul>
 </section>
-<section id="slide-org7a641e0">
-<h3 id="org7a641e0">Challenge2:</h3>
+<section id="slide-org0b0d465">
+<h3 id="org0b0d465">Challenge2:</h3>
 <ul>
 <li>Überlegt euch eine Frage, die 8 Antworten haben kann</li>
 <li>Passt euer Gerät an oder baut ein neues</li>
@@ -89,8 +89,47 @@
 </section>
 </section>
 <section>
-<section id="slide-orgf687fa0">
-<h2 id="orgf687fa0">Zahlensysteme</h2>
+<section id="slide-orgb4f8e49">
+<h2 id="orgb4f8e49">Wichtige Begriffe</h2>
+<div class="outline-text-2" id="text-orgb4f8e49">
+</div>
+</section>
+<section id="slide-orga9f56e9">
+<h3 id="orga9f56e9">Bit</h3>
+<p class="fragment roll-in">
+Minimale Einheit (1 oder 0)
+B(inary) (Dig)it
+</p>
+</section>
+<section id="slide-org6ffcbe0">
+<h3 id="org6ffcbe0">Bandbreite</h3>
+<p class="fragment roll-in">
+Übertragungsrate, gemessen mittels einer Bitrate
+</p>
+</section>
+<section id="slide-org938b23b">
+<h3 id="org938b23b">Bitrate</h3>
+<p class="fragment roll-in">
+Anzahl der Bits, die gesendet werden, pro Zeiteinheit (Sekunde)
+</p>
+</section>
+<section id="slide-orga88714f">
+<h3 id="orga88714f">Latenz</h3>
+<p class="fragment roll-in">
+Zeit, die ein Bit benötigt, um vom Sender zum Empfänger zu kommen
+</p>
+</section>
+<section id="slide-org18f8551">
+<h3 id="org18f8551">Protokoll</h3>
+<p class="fragment roll-in">
+Ein Regelwerk (mehrere Regeln), welche den Austausch/Übertragung von Daten
+zwischen Geräten beschreibt
+</p>
+</section>
+</section>
+<section>
+<section id="slide-org4b10810">
+<h2 id="org4b10810">Zahlensysteme</h2>
 <ul class="fragment roll-in">
 <li>Binär (2)</li>
 <li>Oktal (8)</li>
@@ -100,8 +139,8 @@
 
 </ul>
 </section>
-<section id="slide-org2956d7b">
-<h3 id="org2956d7b">Dezimal (Basis 10)</h3>
+<section id="slide-orge389e91">
+<h3 id="orge389e91">Dezimal (Basis 10)</h3>
 <pre  class="example">
 5498,23 = 5*10³ + 4*10² + 9*10¹ + 8*10⁰ + 2*10⁻¹ + 3*10⁻²
         = 5*1000 + 4*100 + 9*10 + 8*1 + 2*0.1 + 3*0.01
@@ -112,8 +151,8 @@ Tipp:
 </pre>
 
 </section>
-<section id="slide-orge2e02bd">
-<h3 id="orge2e02bd">Binär (Basis 2 - 0,1)</h3>
+<section id="slide-org115c579">
+<h3 id="org115c579">Binär (Basis 2 - 0,1)</h3>
 <pre  class="example">
 11 0110 = 1*2⁵ + 1*2⁴ + 0*2³ + 1*2² + 1*2¹ + 0*2⁰
           = 1*32 + 1*16 + 0*8 + 1*4 + 1*2 + 0*1
@@ -121,8 +160,8 @@ Tipp:
 </pre>
 
 </section>
-<section id="slide-org486a218">
-<h4 id="org486a218">Zusatz:</h4>
+<section id="slide-orgda550cb">
+<h4 id="orgda550cb">Zusatz:</h4>
 <ul>
 <li>Eine Stelle hat den Namen Bit</li>
 <li>8 Bits heißen Byte</li>
@@ -134,8 +173,8 @@ Tipp:
   11 0110 -&gt; 0011 0110
 </pre>
 </section>
-<section id="slide-orgf77d87d">
-<h4 id="orgf77d87d">Aufgabe:</h4>
+<section id="slide-org6ec4d07">
+<h4 id="org6ec4d07">Aufgabe:</h4>
 <ul>
 <li>Schreibe die 2er Potenzen bis 2¹²</li>
 <li>Schreibe die Zahlen von 0-7 in Binär untereinander</li>
@@ -150,13 +189,13 @@ Achte darauf, wie viele Bits (Stellen) du benötigst
 </p>
 
 </section>
-<section id="slide-org9d336e1">
-<h4 id="org9d336e1">Lösung:</h4>
-<div class="outline-text-4" id="text-org9d336e1">
+<section id="slide-org575be13">
+<h4 id="org575be13">Lösung:</h4>
+<div class="outline-text-4" id="text-org575be13">
 </div>
 <ul class="org-ul">
-<li><a id="org40dfed1"></a>1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096<br /></li>
-<li><a id="orgce8a234"></a>-<br />
+<li><a id="org59e635e"></a>1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096<br /></li>
+<li><a id="orgd7d9d6b"></a>-<br />
 <pre  class="example">
 000 (0)   100 (4)
 001 (1)   101 (5)
@@ -164,14 +203,14 @@ Achte darauf, wie viele Bits (Stellen) du benötigst
 011 (3)   111 (7)
 </pre>
 </li>
-<li><a id="org484b647"></a>0000 1101<br /></li>
-<li><a id="org6628829"></a>1000 1101<br /></li>
-<li><a id="org9a35e30"></a>1111 1111<br /></li>
+<li><a id="org60e880a"></a>0000 1101<br /></li>
+<li><a id="org56a4cb4"></a>1000 1101<br /></li>
+<li><a id="org6887cb6"></a>1111 1111<br /></li>
 </ul>
 
 </section>
-<section id="slide-orgcc9a761">
-<h3 id="orgcc9a761">Hexadezimal (Basis 16 0-9,A-F)</h3>
+<section id="slide-org88424c3">
+<h3 id="org88424c3">Hexadezimal (Basis 16 0-9,A-F)</h3>
 <pre  class="example">
 15 7A = 1*16³ + 5*16² + 7*16¹ + 10*16⁰
       = 1*4096 + 5*256 + 7*16 + 10*1
@@ -184,8 +223,8 @@ Umwandlung in Binär:
 </pre>
 
 </section>
-<section id="slide-orgc4ec4c6">
-<h4 id="orgc4ec4c6">Zusatz:</h4>
+<section id="slide-orgd426ead">
+<h4 id="orgd426ead">Zusatz:</h4>
 <ul>
 <li>Eine Stelle entspricht 4 Bits</li>
 <li>Bei Umrechnung in Dezimal, zuvor in Binär umrechnen</li>
@@ -194,8 +233,8 @@ Umwandlung in Binär:
 </ul>
 
 </section>
-<section id="slide-orgb6a8634">
-<h4 id="orgb6a8634">Aufgabe:</h4>
+<section id="slide-org2fb2d2f">
+<h4 id="org2fb2d2f">Aufgabe:</h4>
 <ul>
 <li>Schreibe die Zahl 13 in Hexadezimal</li>
 <li>Schreibe die Zahl 141 in Hexadezimal</li>
@@ -204,28 +243,28 @@ Umwandlung in Binär:
 </ul>
 
 </section>
-<section id="slide-orgc40c3a7">
-<h4 id="orgc40c3a7">Lösung:</h4>
-<div class="outline-text-4" id="text-orgc40c3a7">
+<section id="slide-org573e11b">
+<h4 id="org573e11b">Lösung:</h4>
+<div class="outline-text-4" id="text-org573e11b">
 </div>
 <ul class="org-ul">
-<li><a id="org7aacfbd"></a>0x0D<br /></li>
-<li><a id="orga55664a"></a>0x8D<br /></li>
-<li><a id="orgcd8f67a"></a>0xFF<br /></li>
+<li><a id="org228faef"></a>0x0D<br /></li>
+<li><a id="orge71bdc9"></a>0x8D<br /></li>
+<li><a id="orge671348"></a>0xFF<br /></li>
 </ul>
 
 </section>
 </section>
 <section>
-<section id="slide-org0e0c7f9">
-<h2 id="org0e0c7f9">Codierungen</h2>
+<section id="slide-org5a09b27">
+<h2 id="org5a09b27">Codierungen</h2>
 <p>
 Computer stellen Informationen auf niedrigster Ebene in Binär dar. Für jedes
 Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
 </p>
 </section>
-<section id="slide-orgdf664a5">
-<h3 id="orgdf664a5">ASCII (7 Bit pro Zeichen)</h3>
+<section id="slide-org7f7c2b5">
+<h3 id="org7f7c2b5">ASCII (7 Bit pro Zeichen)</h3>
 <ul>
 <li><a href="https://www.asciitable.com/">Ascii Tabelle</a></li>
 <li>128 Zeichen</li>
@@ -236,13 +275,13 @@ Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
 
 </ul>
 </section>
-<section id="slide-orgd4fe96f">
-<h3 id="orgd4fe96f">Unicode (1-4 Bytes pro Zeichen)</h3>
-<div class="outline-text-3" id="text-orgd4fe96f">
+<section id="slide-org4cc03e8">
+<h3 id="org4cc03e8">Unicode (1-4 Bytes pro Zeichen)</h3>
+<div class="outline-text-3" id="text-org4cc03e8">
 </div>
 </section>
-<section id="slide-org862f306">
-<h4 id="org862f306">UTF-8</h4>
+<section id="slide-orgf6466d1">
+<h4 id="orgf6466d1">UTF-8</h4>
 <ul>
 <li><a href="https://www.utf8-chartable.de/">UTF-8 Tabelle</a></li>
 <li>$ -&gt; U+0024 -&gt; 0x24 -&gt; 0010 0100</li>
@@ -250,8 +289,8 @@ Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
 
 </ul>
 </section>
-<section id="slide-org946b184">
-<h4 id="org946b184">UTF-16</h4>
+<section id="slide-org560d1e4">
+<h4 id="org560d1e4">UTF-16</h4>
 <ul>
 <li><a href="https://www.fileformat.info/info/charset/UTF-16/list.htm">UTF-16 Tabelle</a></li>
 <li>😄 -&gt; U+1F604 -&gt; 0xD8 0x3D 0xDE 0x04</li>
@@ -261,8 +300,8 @@ Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
 </section>
 </section>
 <section>
-<section id="slide-orgbc3e3db">
-<h2 id="orgbc3e3db">Transfer von Bits</h2>
+<section id="slide-orgf665523">
+<h2 id="orgf665523">Transfer von Bits</h2>
 <ul class="fragment roll-in">
 <li></li>
 
