Add Digital Information

--- a/welcome.html
+++ b/welcome.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Welcome</title>
-<meta name="author" content="Daniel Glinka"/>
+<meta name="author" content="(Daniel Glinka)"/>
 <style type="text/css">
 .underline { text-decoration: underline; }
 </style>
@@ -28,36 +28,35 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide">
-<h1>Software Engineering</h1><h2>Colegio Neuland</h2><p>by Daniel Glinka</p>
+<section id="sec-title-slide"><h1>Software Engineering</h1><h2>Colegio Neuland</h2><p>by Daniel Glinka</p>
 </section>
 
 <section>
-<section id="slide-orgb21e3e1">
-<h2 id="orgb21e3e1">Über mich</h2>
-<div class="outline-text-2" id="text-orgb21e3e1">
+<section id="slide-org29ccd94">
+<h2 id="org29ccd94">Über mich</h2>
+<div class="outline-text-2" id="text-org29ccd94">
 </div>
 </section>
-<section id="slide-org1de616b">
-<h3 id="org1de616b">Name</h3>
+<section id="slide-org5e16268">
+<h3 id="org5e16268">Name</h3>
 <p>
 Daniel Glinka (27)
 </p>
 </section>
-<section id="slide-orgecca064">
-<h3 id="orgecca064">Studium</h3>
+<section id="slide-org1f8493b">
+<h3 id="org1f8493b">Studium</h3>
 <p>
 Software Entwicklung (B.Eng) in Esslingen (Deutschland)
 </p>
 </section>
-<section id="slide-org393aadb">
-<h3 id="org393aadb">Arbeit</h3>
+<section id="slide-org7afc564">
+<h3 id="org7afc564">Arbeit</h3>
 <p>
 Cooperativa Multiactiva Neuland Ltda.
 </p>
 </section>
-<section id="slide-orge504029">
-<h3 id="orge504029">Links</h3>
+<section id="slide-orgbb4e078">
+<h3 id="orgbb4e078">Links</h3>
 <ul>
 <li><a href="https://github.com/kaitsh">Github</a></li>
 <li><a href="https://www.linkedin.com/in/danielglinka/">LinkedIn</a></li>
@@ -68,23 +67,23 @@ Cooperativa Multiactiva Neuland Ltda.
 </section>
 </section>
 <section>
-<section id="slide-org174c242">
-<h2 id="org174c242">Über euch?</h2>
+<section id="slide-org0a9ec32">
+<h2 id="org0a9ec32">Über euch?</h2>
 </section>
 </section>
 <section>
-<section id="slide-orgc58669b">
-<h2 id="orgc58669b">Was erwartet ihr von dem Projekt?</h2>
-<div class="outline-text-2" id="text-orgc58669b">
+<section id="slide-orgbdd19cf">
+<h2 id="orgbdd19cf">Was erwartet ihr von dem Projekt?</h2>
+<div class="outline-text-2" id="text-orgbdd19cf">
 </div>
 </section>
-<section id="slide-org8403488">
-<h3 id="org8403488"><img src="./assets/welcome_expectations.gif" alt="welcome_expectations.gif" /></h3>
+<section id="slide-orge15fec5">
+<h3 id="orge15fec5"><img src="./assets/welcome_expectations.gif" alt="welcome_expectations.gif" /></h3>
 </section>
 </section>
 <section>
-<section id="slide-org036a04e">
-<h2 id="org036a04e">Projekt</h2>
+<section id="slide-orgdad2d87">
+<h2 id="orgdad2d87">Projekt</h2>
 <p class="fragment roll-in">
 Ziel des Projektes ist es, in Gruppen von ca. 2 Schülern, eine interaktive
 Website planen, gestalten und erstellen. Die Zeit kann selbst eingeteilt werden.
@@ -93,16 +92,16 @@ Am Ende präsentiert jede Gruppe ihr Projekt.
 </section>
 </section>
 <section>
-<section id="slide-orga5cc16f">
-<h2 id="orga5cc16f">Agenda</h2>
-<div class="outline-text-2" id="text-orga5cc16f">
+<section id="slide-org8392626">
+<h2 id="org8392626">Agenda</h2>
+<div class="outline-text-2" id="text-org8392626">
 </div>
 </section>
-<section id="slide-org787e345">
-<h3 id="org787e345">Digitale Information und das Internet</h3>
+<section id="slide-orgc6acbe4">
+<h3 id="orgc6acbe4">Digitale Information und das Internet</h3>
 </section>
-<section id="slide-orgc04f54f">
-<h3 id="orgc04f54f">Methoden zur Planung von Softwareprojekten</h3>
+<section id="slide-org922c4ed">
+<h3 id="org922c4ed">Methoden zur Planung von Softwareprojekten</h3>
 <ul>
 <li>Projektmanagement</li>
 <li>Anforderungsanalyse</li>
@@ -113,8 +112,8 @@ Am Ende präsentiert jede Gruppe ihr Projekt.
 
 </ul>
 </section>
-<section id="slide-org4794515">
-<h3 id="org4794515">Einführung in die Programmierung</h3>
+<section id="slide-org81f3f1a">
+<h3 id="org81f3f1a">Einführung in die Programmierung</h3>
 <ul>
 <li>Markupsprache HTML</li>
 <li>Markupsprache CSS</li>
@@ -124,21 +123,21 @@ Am Ende präsentiert jede Gruppe ihr Projekt.
 </section>
 </section>
 <section>
-<section id="slide-orgb14d772">
-<h2 id="orgb14d772">Innovationen</h2>
-<div class="outline-text-2" id="text-orgb14d772">
+<section id="slide-org22920ce">
+<h2 id="org22920ce">Innovationen</h2>
+<div class="outline-text-2" id="text-org22920ce">
 </div>
 </section>
-<section id="slide-org59cf361">
-<h3 id="org59cf361">Innovation heißt, ein Problem zu erkennen und dieses zu lösen</h3>
+<section id="slide-org8ac67ef">
+<h3 id="org8ac67ef">Innovation heißt, ein Problem zu erkennen und dieses zu lösen</h3>
 </section>
-<section id="slide-org47ff5ef">
-<h3 id="org47ff5ef">Aufgabe (Rapid Prototyping):</h3>
+<section id="slide-orgeaf2e60">
+<h3 id="orgeaf2e60">Aufgabe (Rapid Prototyping):</h3>
 <p>
 Wie innovativ sind wir? Präsentieren von Ideen durch Rapid Prototyping.
 </p>
 </section>
-<section>
+<section id="slide-orgeaf2e60-split">
 <ul>
 <li>Überlege dir 4 Dinge, die dich interessieren</li>
 <li>Denke nach, welche Auswirkungen Technologie darauf hat</li>
@@ -147,8 +146,8 @@ Wie innovativ sind wir? Präsentieren von Ideen durch Rapid Prototyping.
 
 </ul>
 </section>
-<section id="slide-org6557ee4">
-<h3 id="org6557ee4">Tabelle</h3>
+<section id="slide-orgf297bd3">
+<h3 id="orgf297bd3">Tabelle</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -193,20 +192,19 @@ Wie innovativ sind wir? Präsentieren von Ideen durch Rapid Prototyping.
 </tbody>
 </table>
 </section>
-<section id="slide-orgd1d4e55">
-<h3 id="orgd1d4e55">Prototyp</h3>
+<section id="slide-org9b4892c">
+<h3 id="org9b4892c">Prototyp</h3>
 <p>
 Skizziert eure Idee und stellt sie vor.
 </p>
 </section>
 </section>
 <section>
-<section id="slide-org7820713">
-<h2 id="org7820713">Ausblick</h2>
+<section id="slide-org7f18ca2">
+<h2 id="org7f18ca2">Ausblick</h2>
 <ul>
-<li>Internet</li>
 <li>Kommunikation</li>
-<li>Zahlensystemen (Binär)</li>
+<li>Zahlensysteme (Binär)</li>
 <li>Codierungen</li>
 
 </ul>
@@ -215,39 +213,25 @@ Skizziert eure Idee und stellt sie vor.
 </div>
 </div>
 <p> Created by with org </p>
-<script src="https://cdn.jsdelivr.net/npm/reveal.js/lib/js/head.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/reveal.js/js/reveal.js"></script>
+
 <script>
 // Full list of configuration options available here:
 // https://github.com/hakimel/reveal.js#configuration
 Reveal.initialize({
+multiplex: {
+    secret: '', // null if client
+    id: '', // id, obtained from socket.io server
+    url: '' // Location of socket.io server
+},
 
-controls: true,
-progress: true,
-history: false,
-center: true,
-slideNumber: 'c',
-rollingLinks: false,
-keyboard: true,
-mouseWheel: false,
-fragmentInURL: false,
-hashOneBasedIndex: false,
-pdfSeparateFragments: true,
-
-overview: true,
-
-theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-transition: Reveal.getQueryHash().transition || 'convex', // see README of reveal.js for options
-transitionSpeed: 'default',
-
-// Optional libraries used to extend reveal.js
+// Optional libraries used to extend on reveal.js
 dependencies: [
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
  { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
  { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
- { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; } },
- { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } }]
-
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }]
 });
 </script>
 </body>
