--- a/basics.html
+++ b/basics.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Internet</title>
-<meta name="author" content="Daniel Glinka"/>
+<title>Grundlagen</title>
+<meta name="author" content="(Daniel Glinka)"/>
 <style type="text/css">
 .underline { text-decoration: underline; }
 </style>
@@ -28,35 +28,34 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide">
-<h1>Projekt Software Entwicklung</h1><h2>Colegio Neuland</h2><p>by Daniel Glinka</p>
+<section id="sec-title-slide"><h1>Projekt Software Entwicklung</h1><h2>Colegio Neuland</h2><p>by Daniel Glinka</p>
 </section>
 
 <section>
-<section id="slide-orga2bba18">
-<h2 id="orga2bba18">Wichtige Fragen</h2>
-<div class="outline-text-2" id="text-orga2bba18">
+<section id="slide-org961a43f">
+<h2 id="org961a43f">Wichtige Fragen</h2>
+<div class="outline-text-2" id="text-org961a43f">
 </div>
 </section>
-<section id="slide-org6c56dcb">
-<h3 id="org6c56dcb">Wie stellen Computer Informationen dar?</h3>
+<section id="slide-org3bd6f8e">
+<h3 id="org3bd6f8e">Wie stellen Computer Informationen dar?</h3>
 </section>
-<section id="slide-orgef94737">
-<h3 id="orgef94737">Wie kommen Informationen von einem Computer zum anderen?</h3>
+<section id="slide-orga4031e7">
+<h3 id="orga4031e7">Wie kommen Informationen von einem Computer zum anderen?</h3>
 </section>
-<section id="slide-orga10d708">
-<h3 id="orga10d708">Wie kann man ein System erstellen, welche Informationen darstellt/versendet?</h3>
+<section id="slide-org6fdaabc">
+<h3 id="org6fdaabc">Wie kann man ein System erstellen, welche Informationen darstellt/versendet?</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orge46a382">
-<h2 id="orge46a382">Kommunizieren von Information</h2>
-<div class="outline-text-2" id="text-orge46a382">
+<section id="slide-orgdbfc38e">
+<h2 id="orgdbfc38e">Kommunizieren von Information</h2>
+<div class="outline-text-2" id="text-orgdbfc38e">
 </div>
 </section>
-<section id="slide-orga01d44a">
-<h3 id="orga01d44a">Aufgabe:</h3>
+<section id="slide-org0edca6a">
+<h3 id="org0edca6a">Aufgabe:</h3>
 <ul>
 <li>Überlegt euch zu 2 eine Frage, die eine binäre Antwort (2 Möglichkeiten) hat</li>
 <li>Baut etwas, womit ihr die Antwort versenden könnt</li>
@@ -70,16 +69,16 @@
 
 </ul>
 </section>
-<section id="slide-org4412062">
-<h3 id="org4412062">Challenge1:</h3>
+<section id="slide-orgec0e5c9">
+<h3 id="orgec0e5c9">Challenge1:</h3>
 <ul>
 <li>Überlegt euch eine Frage, die 4 Antworten haben kann</li>
 <li>Passt euer Gerät an oder baut ein neues</li>
 
 </ul>
 </section>
-<section id="slide-org0b0d465">
-<h3 id="org0b0d465">Challenge2:</h3>
+<section id="slide-orga6cee3b">
+<h3 id="orga6cee3b">Challenge2:</h3>
 <ul>
 <li>Überlegt euch eine Frage, die 8 Antworten haben kann</li>
 <li>Passt euer Gerät an oder baut ein neues</li>
@@ -89,38 +88,38 @@
 </section>
 </section>
 <section>
-<section id="slide-orgb4f8e49">
-<h2 id="orgb4f8e49">Wichtige Begriffe</h2>
-<div class="outline-text-2" id="text-orgb4f8e49">
+<section id="slide-org108aef4">
+<h2 id="org108aef4">Wichtige Begriffe</h2>
+<div class="outline-text-2" id="text-org108aef4">
 </div>
 </section>
-<section id="slide-orga9f56e9">
-<h3 id="orga9f56e9">Bit</h3>
+<section id="slide-orgd141938">
+<h3 id="orgd141938">Bit</h3>
 <p class="fragment roll-in">
 Minimale Einheit (1 oder 0)
 B(inary) (Dig)it
 </p>
 </section>
-<section id="slide-org6ffcbe0">
-<h3 id="org6ffcbe0">Bandbreite</h3>
+<section id="slide-orgdc80b3a">
+<h3 id="orgdc80b3a">Bandbreite</h3>
 <p class="fragment roll-in">
 Übertragungsrate, gemessen mittels einer Bitrate
 </p>
 </section>
-<section id="slide-org938b23b">
-<h3 id="org938b23b">Bitrate</h3>
+<section id="slide-org44cc94f">
+<h3 id="org44cc94f">Bitrate</h3>
 <p class="fragment roll-in">
 Anzahl der Bits, die gesendet werden, pro Zeiteinheit (Sekunde)
 </p>
 </section>
-<section id="slide-orga88714f">
-<h3 id="orga88714f">Latenz</h3>
+<section id="slide-orgd901c14">
+<h3 id="orgd901c14">Latenz</h3>
 <p class="fragment roll-in">
 Zeit, die ein Bit benötigt, um vom Sender zum Empfänger zu kommen
 </p>
 </section>
-<section id="slide-org18f8551">
-<h3 id="org18f8551">Protokoll</h3>
+<section id="slide-orge84d305">
+<h3 id="orge84d305">Protokoll</h3>
 <p class="fragment roll-in">
 Ein Regelwerk (mehrere Regeln), welche den Austausch/Übertragung von Daten
 zwischen Geräten beschreibt
@@ -128,8 +127,8 @@ zwischen Geräten beschreibt
 </section>
 </section>
 <section>
-<section id="slide-org4b10810">
-<h2 id="org4b10810">Zahlensysteme</h2>
+<section id="slide-org90dd005">
+<h2 id="org90dd005">Zahlensysteme</h2>
 <ul class="fragment roll-in">
 <li>Binär (2)</li>
 <li>Oktal (8)</li>
@@ -139,20 +138,20 @@ zwischen Geräten beschreibt
 
 </ul>
 </section>
-<section id="slide-orge389e91">
-<h3 id="orge389e91">Dezimal (Basis 10)</h3>
+<section id="slide-orgdf3016f">
+<h3 id="orgdf3016f">Dezimal (Basis 10)</h3>
 <pre  class="example">
 5498,23 = 5*10³ + 4*10² + 9*10¹ + 8*10⁰ + 2*10⁻¹ + 3*10⁻²
         = 5*1000 + 4*100 + 9*10 + 8*1 + 2*0.1 + 3*0.01
 
 Tipp:
 10⁻¹ = 1/10¹ = 0.1
-10⁻² = 1/10² = 0.2
+10⁻² = 1/10² = 0.01
 </pre>
 
 </section>
-<section id="slide-org115c579">
-<h3 id="org115c579">Binär (Basis 2 - 0,1)</h3>
+<section id="slide-org9efdfb0">
+<h3 id="org9efdfb0">Binär (Basis 2 - 0,1)</h3>
 <pre  class="example">
 11 0110 = 1*2⁵ + 1*2⁴ + 0*2³ + 1*2² + 1*2¹ + 0*2⁰
           = 1*32 + 1*16 + 0*8 + 1*4 + 1*2 + 0*1
@@ -160,8 +159,8 @@ Tipp:
 </pre>
 
 </section>
-<section id="slide-orgda550cb">
-<h4 id="orgda550cb">Zusatz:</h4>
+<section id="slide-orgf78d6b7">
+<h4 id="orgf78d6b7">Zusatz:</h4>
 <ul>
 <li>Eine Stelle hat den Namen Bit</li>
 <li>8 Bits heißen Byte</li>
@@ -173,8 +172,8 @@ Tipp:
   11 0110 -&gt; 0011 0110
 </pre>
 </section>
-<section id="slide-org6ec4d07">
-<h4 id="org6ec4d07">Aufgabe:</h4>
+<section id="slide-orgac5e956">
+<h4 id="orgac5e956">Aufgabe:</h4>
 <ul>
 <li>Schreibe die 2er Potenzen bis 2¹²</li>
 <li>Schreibe die Zahlen von 0-7 in Binär untereinander</li>
@@ -189,13 +188,13 @@ Achte darauf, wie viele Bits (Stellen) du benötigst
 </p>
 
 </section>
-<section id="slide-org575be13">
-<h4 id="org575be13">Lösung:</h4>
-<div class="outline-text-4" id="text-org575be13">
+<section id="slide-orge3d8f67">
+<h4 id="orge3d8f67">Lösung:</h4>
+<div class="outline-text-4" id="text-orge3d8f67">
 </div>
 <ul class="org-ul">
-<li><a id="org59e635e"></a>1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096<br /></li>
-<li><a id="orgd7d9d6b"></a>-<br />
+<li><a id="org50ad13d"></a>1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096<br /></li>
+<li><a id="org2e87973"></a>-<br />
 <pre  class="example">
 000 (0)   100 (4)
 001 (1)   101 (5)
@@ -203,14 +202,14 @@ Achte darauf, wie viele Bits (Stellen) du benötigst
 011 (3)   111 (7)
 </pre>
 </li>
-<li><a id="org60e880a"></a>0000 1101<br /></li>
-<li><a id="org56a4cb4"></a>1000 1101<br /></li>
-<li><a id="org6887cb6"></a>1111 1111<br /></li>
+<li><a id="org56586b9"></a>0000 1101<br /></li>
+<li><a id="org2f31973"></a>1000 1101<br /></li>
+<li><a id="orgf615c82"></a>1111 1111<br /></li>
 </ul>
 
 </section>
-<section id="slide-org88424c3">
-<h3 id="org88424c3">Hexadezimal (Basis 16 0-9,A-F)</h3>
+<section id="slide-org5d6c7fd">
+<h3 id="org5d6c7fd">Hexadezimal (Basis 16 0-9,A-F)</h3>
 <pre  class="example">
 15 7A = 1*16³ + 5*16² + 7*16¹ + 10*16⁰
       = 1*4096 + 5*256 + 7*16 + 10*1
@@ -223,8 +222,8 @@ Umwandlung in Binär:
 </pre>
 
 </section>
-<section id="slide-orgd426ead">
-<h4 id="orgd426ead">Zusatz:</h4>
+<section id="slide-orgef39478">
+<h4 id="orgef39478">Zusatz:</h4>
 <ul>
 <li>Eine Stelle entspricht 4 Bits</li>
 <li>Bei Umrechnung in Dezimal, zuvor in Binär umrechnen</li>
@@ -233,8 +232,8 @@ Umwandlung in Binär:
 </ul>
 
 </section>
-<section id="slide-org2fb2d2f">
-<h4 id="org2fb2d2f">Aufgabe:</h4>
+<section id="slide-org4b3d483">
+<h4 id="org4b3d483">Aufgabe:</h4>
 <ul>
 <li>Schreibe die Zahl 13 in Hexadezimal</li>
 <li>Schreibe die Zahl 141 in Hexadezimal</li>
@@ -243,28 +242,28 @@ Umwandlung in Binär:
 </ul>
 
 </section>
-<section id="slide-org573e11b">
-<h4 id="org573e11b">Lösung:</h4>
-<div class="outline-text-4" id="text-org573e11b">
+<section id="slide-org7066a23">
+<h4 id="org7066a23">Lösung:</h4>
+<div class="outline-text-4" id="text-org7066a23">
 </div>
 <ul class="org-ul">
-<li><a id="org228faef"></a>0x0D<br /></li>
-<li><a id="orge71bdc9"></a>0x8D<br /></li>
-<li><a id="orge671348"></a>0xFF<br /></li>
+<li><a id="org8437981"></a>0x0D<br /></li>
+<li><a id="org08f0c7d"></a>0x8D<br /></li>
+<li><a id="org5c297cd"></a>0xFF<br /></li>
 </ul>
 
 </section>
 </section>
 <section>
-<section id="slide-org5a09b27">
-<h2 id="org5a09b27">Codierungen</h2>
+<section id="slide-orgc6044be">
+<h2 id="orgc6044be">Codierungen</h2>
 <p>
 Computer stellen Informationen auf niedrigster Ebene in Binär dar. Für jedes
 Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
 </p>
 </section>
-<section id="slide-org7f7c2b5">
-<h3 id="org7f7c2b5">ASCII (7 Bit pro Zeichen)</h3>
+<section id="slide-org2f0bfcf">
+<h3 id="org2f0bfcf">ASCII (7 Bit pro Zeichen)</h3>
 <ul>
 <li><a href="https://www.asciitable.com/">Ascii Tabelle</a></li>
 <li>128 Zeichen</li>
@@ -275,13 +274,13 @@ Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
 
 </ul>
 </section>
-<section id="slide-org4cc03e8">
-<h3 id="org4cc03e8">Unicode (1-4 Bytes pro Zeichen)</h3>
-<div class="outline-text-3" id="text-org4cc03e8">
+<section id="slide-org4d99376">
+<h3 id="org4d99376">Unicode (1-4 Bytes pro Zeichen)</h3>
+<div class="outline-text-3" id="text-org4d99376">
 </div>
 </section>
-<section id="slide-orgf6466d1">
-<h4 id="orgf6466d1">UTF-8</h4>
+<section id="slide-org798ef98">
+<h4 id="org798ef98">UTF-8</h4>
 <ul>
 <li><a href="https://www.utf8-chartable.de/">UTF-8 Tabelle</a></li>
 <li>$ -&gt; U+0024 -&gt; 0x24 -&gt; 0010 0100</li>
@@ -289,8 +288,8 @@ Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
 
 </ul>
 </section>
-<section id="slide-org560d1e4">
-<h4 id="org560d1e4">UTF-16</h4>
+<section id="slide-org4fe2f26">
+<h4 id="org4fe2f26">UTF-16</h4>
 <ul>
 <li><a href="https://www.fileformat.info/info/charset/UTF-16/list.htm">UTF-16 Tabelle</a></li>
 <li>😄 -&gt; U+1F604 -&gt; 0xD8 0x3D 0xDE 0x04</li>
@@ -300,8 +299,8 @@ Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
 </section>
 </section>
 <section>
-<section id="slide-orgf665523">
-<h2 id="orgf665523">Transfer von Bits</h2>
+<section id="slide-org4c58373">
+<h2 id="org4c58373">Transfer von Bits</h2>
 <ul class="fragment roll-in">
 <li></li>
 
@@ -311,39 +310,25 @@ Zeichen eines z.B. Texts gibt es entsprechene Codierungen in Binär.
 </div>
 </div>
 <p> Created by with org </p>
-<script src="https://cdn.jsdelivr.net/npm/reveal.js/lib/js/head.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/reveal.js/js/reveal.js"></script>
+
 <script>
 // Full list of configuration options available here:
 // https://github.com/hakimel/reveal.js#configuration
 Reveal.initialize({
+multiplex: {
+    secret: '', // null if client
+    id: '', // id, obtained from socket.io server
+    url: '' // Location of socket.io server
+},
 
-controls: true,
-progress: true,
-history: false,
-center: true,
-slideNumber: 'c',
-rollingLinks: false,
-keyboard: true,
-mouseWheel: false,
-fragmentInURL: false,
-hashOneBasedIndex: false,
-pdfSeparateFragments: true,
-
-overview: true,
-
-theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-transition: Reveal.getQueryHash().transition || 'convex', // see README of reveal.js for options
-transitionSpeed: 'default',
-
-// Optional libraries used to extend reveal.js
+// Optional libraries used to extend on reveal.js
 dependencies: [
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
  { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
  { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
- { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; } },
- { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } }]
-
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }]
 });
 </script>
 </body>
