Add task section

--- a/project_requirements.html
+++ b/project_requirements.html
@@ -32,8 +32,8 @@
 </section>
 
 <section>
-<section id="slide-org6a34637">
-<h2 id="org6a34637">Ziel</h2>
+<section id="slide-org6fad45e">
+<h2 id="org6fad45e">Ziel</h2>
 
 <div class="figure">
 <p><img src="./assets/project_requirements_cartoon.jpg" alt="project_requirements_cartoon.jpg" />
@@ -43,42 +43,43 @@
 </section>
 </section>
 <section>
-<section id="slide-org7a6e091">
-<h2 id="org7a6e091">Vorgehen</h2>
-<div class="outline-text-2" id="text-org7a6e091">
+<section id="slide-orgd61f8bf">
+<h2 id="orgd61f8bf">Vorgehen</h2>
+<div class="outline-text-2" id="text-orgd61f8bf">
 </div>
 </section>
-<section id="slide-org69f49b6">
-<h3 id="org69f49b6">Ermittlung, Analyse</h3>
-<div class="outline-text-3" id="text-org69f49b6">
+<section id="slide-org28a1f8e">
+<h3 id="org28a1f8e">Ermittlung, Analyse</h3>
+<div class="outline-text-3" id="text-org28a1f8e">
 </div>
 </section>
-<section id="slide-org5cc5351">
-<h4 id="org5cc5351">User Stories</h4>
-<div class="outline-text-4" id="text-org5cc5351">
+<section id="slide-org57d7bff">
+<h4 id="org57d7bff">User Stories</h4>
+<div class="outline-text-4" id="text-org57d7bff">
 </div>
 <ul class="org-ul">
-<li><a id="orgb4b5f36"></a>Als &lt;Person&gt; kann ich &lt;Fähigkeit&gt;, damit ich &lt;Vorteil&gt;.<br /></li>
-<li><a id="orgc865767"></a>Als <i>User</i> kann ich <i>Aufgaben einer Liste hinzufügen</i>, damit ich <i>einen Überblick über meine Aufgaben habe</i>.<br /></li>
-<li><a id="org9294def"></a>Als <i>Programmierer</i> kann ich <i>auf Debug Information zugreifen</i>, damit ich <i>Fehler besser finden kann</i>.<br /></li>
+<li><a id="org0b724fc"></a>Als &lt;Person&gt; kann ich &lt;Fähigkeit&gt;, damit ich &lt;Vorteil&gt;.<br /></li>
+<li><a id="org2bbf919"></a>Als <i>User</i> kann ich <i>Aufgaben einer Liste hinzufügen</i>, damit ich <i>einen Überblick über meine Aufgaben habe</i>.<br /></li>
+<li><a id="org45a8d6f"></a>Als <i>Programmierer</i> kann ich <i>auf Debug Information zugreifen</i>, damit ich <i>Fehler besser finden kann</i>.<br /></li>
 </ul>
 
 </section>
-<section id="slide-org05c04d2">
-<h4 id="org05c04d2"><i>Funktionale Anforderungen</i></h4>
+<section id="slide-org4d640ad">
+<h4 id="org4d640ad"><i>Funktionale Anforderungen</i></h4>
 <p>
 &ldquo;Das Produkt soll den Saldo eines Kontos zu einem Stichtag berechnen.&rdquo;
 </p>
 
 </section>
-<section id="slide-org3daf244">
-<h4 id="org3daf244"><i>Nichtfunktionale Anforderungen</i></h4>
+<section id="slide-orgb61bdff">
+<h4 id="orgb61bdff"><i>Nichtfunktionale Anforderungen</i></h4>
 <p>
 &ldquo;Das Produkt soll dem Anwender innerhalb von einer Sekunde antworten.&rdquo;
 </p>
+
 </section>
-<section id="slide-orgf9eb5d4">
-<h3 id="orgf9eb5d4">Strukturierung, Abstimmung</h3>
+<section id="slide-orgfad8884">
+<h3 id="orgfad8884">Strukturierung, Abstimmung</h3>
 <ul>
 <li>Prüfen, ob Anforderungen abhängig von einander sind</li>
 <li>Ordnen der Anforderungen nach Kategorie</li>
@@ -86,13 +87,25 @@
 </ul>
 
 </section>
-<section id="slide-org9198561">
-<h3 id="org9198561">Prüfung, Bewertung</h3>
+<section id="slide-orgdb866d8">
+<h3 id="orgdb866d8">Prüfung, Bewertung</h3>
 <ul>
 <li>Korrekt</li>
 <li>Machbar</li>
 <li>Notwendig</li>
 <li>Priorität/Wichtigkeit</li>
+
+</ul>
+</section>
+</section>
+<section>
+<section id="slide-org3370aa4">
+<h2 id="org3370aa4">Aufgabe</h2>
+<ul>
+<li>Überlege welche Personen (Stakeholder) an deiner Applikation beteiligt sind</li>
+<li>Erstelle min. 15 User Stories für die verschiedenen Personen</li>
+<li>Strukturiere und prüfe/bewerte die einzelnen Stories</li>
+<li>Erstelle einen Entwicklungs-Log (Dokumentation) und dokumentiere die Stories</li>
 
 </ul>
 </section>
